--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  fl_chart: ^1.0.0
+  fl_chart: ^0.67.0 # Downgrade fl_chart to a version compatible with the desired UI
   flutter_svg: ^2.2.0
   provider: ^6.1.2
   uuid: ^4.4.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/onboading.jpg
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
